--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,12 @@ h1 {
     color: #a1a1a1;
     background: #1f2123;
 }
+
+.instructions {
+    width: 100%;
+    margin-top: 3rem;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
